toast overlaping fixed

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -352,7 +352,7 @@ a {
 .navigation {
     position: fixed;
     display: flex;
-    z-index: 99999;
+    z-index: 1000;
     align-items: center;
     height: 60px;
     width: 100%;
